// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Role Select screen Snapshot Testing Component on RoleSelect screen CustomCheckBox component should render correctly 1`] = `
<View
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": true,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  checkedIcon={
    <Text
      style={
        {
          "color": "#f0f6fb",
          "fontFamily": "Kanit-Medium",
          "fontSize": 20,
        }
      }
    >
      
    </Text>
  }
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignContent": "flex-start",
      "backgroundColor": "#216dab",
      "borderColor": "#ffffff",
      "borderRadius": 10,
      "flexDirection": "row",
      "height": 76,
      "justifyContent": "center",
      "margin": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "padding": 10,
      "width": 153,
    }
  }
  testID=""
  uncheckedIcon={
    <Text
      style={
        {
          "color": "#216dab",
          "fontFamily": "Kanit-Medium",
          "fontSize": 20,
        }
      }
    >
      
    </Text>
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        [
          {
            "backgroundColor": "transparent",
            "color": "#20303C",
            "writingDirection": "ltr",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "color": "#f0f6fb",
            "fontFamily": "Kanit-Medium",
            "fontSize": 20,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Testing Role Select screen Snapshot Testing should render Role Select screen correctly 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    {
      "flex": 1,
    }
  }
>
  <RNSScreenStack
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNSScreen
      collapsable={false}
      forwardedRef={[Function]}
      gestureResponseDistance={
        {
          "bottom": -1,
          "end": -1,
          "start": -1,
          "top": -1,
        }
      }
      nativeBackButtonDismissalEnabled={false}
      onAppear={[Function]}
      onDisappear={[Function]}
      onDismissed={[Function]}
      onGestureCancel={[Function]}
      onHeaderBackButtonClicked={[Function]}
      onNativeDismissCancelled={[Function]}
      onTransitionProgress={[Function]}
      onWillDisappear={[Function]}
      replaceAnimation="push"
      sheetAllowedDetents="large"
      sheetCornerRadius={-1}
      sheetExpandsWhenScrolledToEdge={true}
      sheetGrabberVisible={false}
      sheetLargestUndimmedDetent="all"
      stackPresentation="push"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      swipeDirection="horizontal"
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        style={
          {
            "flex": 1,
            "flexDirection": "column-reverse",
          }
        }
      >
        <View
          collapsable={false}
          style={
            [
              {
                "flex": 1,
              },
              {
                "backgroundColor": "rgb(242, 242, 242)",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                undefined,
                undefined,
                {
                  "flex": 1,
                },
                undefined,
                {},
                {},
                {},
                {
                  "backgroundColor": "#f0f6fb",
                  "justifyContent": "space-between",
                  "position": "relative",
                },
              ]
            }
            testID="RoleSelectScreen"
          >
            <RCTScrollView
              contentContainerStyle={
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexGrow": 1,
                  "gap": undefined,
                  "justifyContent": "space-between",
                  "marginBottom": undefined,
                  "padding": undefined,
                  "paddingVertical": 113,
                }
              }
            >
              <View>
                <View
                  center={true}
                  style={
                    [
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      {},
                      {},
                      {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    numberOfLines={0}
                    style={
                      {
                        "borderBottomWidth": 0,
                        "borderColor": undefined,
                        "color": "#216dab",
                        "fontFamily": "Kanit-Bold",
                        "fontSize": 30,
                        "lineHeight": undefined,
                        "textAlign": undefined,
                      }
                    }
                  >
                    Helo 
                    ,
                  </Text>
                  <Text
                    numberOfLines={0}
                    style={
                      {
                        "borderBottomWidth": 0,
                        "borderColor": undefined,
                        "color": "#216dab",
                        "fontFamily": "Kanit-Bold",
                        "fontSize": 30,
                        "lineHeight": undefined,
                        "textAlign": undefined,
                      }
                    }
                  >
                    Welcome to ShipHire!
                  </Text>
                  <View
                    marginT-20={true}
                    style={
                      [
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        {},
                        {
                          "marginTop": 20,
                        },
                        {},
                        {
                          "marginBottom": 100,
                        },
                      ]
                    }
                  >
                    <Text
                      numberOfLines={0}
                      style={
                        {
                          "borderBottomWidth": 0,
                          "borderColor": undefined,
                          "color": "#4d5963",
                          "fontFamily": "Kanit-Regular",
                          "fontSize": 20,
                          "lineHeight": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      Please choose your role
                    </Text>
                  </View>
                  <View
                    row={true}
                    style={
                      [
                        undefined,
                        undefined,
                        undefined,
                        undefined,
                        {},
                        {},
                        {
                          "flexDirection": "row",
                        },
                        undefined,
                      ]
                    }
                  >
                    <View
                      accessibilityRole="checkbox"
                      accessibilityState={
                        {
                          "busy": undefined,
                          "checked": false,
                          "disabled": false,
                          "expanded": undefined,
                          "selected": undefined,
                        }
                      }
                      accessibilityValue={
                        {
                          "max": undefined,
                          "min": undefined,
                          "now": undefined,
                          "text": undefined,
                        }
                      }
                      accessible={true}
                      checkedIcon={
                        <Text
                          style={
                            {
                              "color": "#f0f6fb",
                              "fontFamily": "Kanit-Medium",
                              "fontSize": 20,
                            }
                          }
                        >
                          Renter
                        </Text>
                      }
                      collapsable={false}
                      focusable={true}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        {
                          "alignContent": "flex-start",
                          "backgroundColor": "#d7edff",
                          "borderColor": "#216dab",
                          "borderRadius": 10,
                          "borderWidth": 2,
                          "flexDirection": "row",
                          "height": 76,
                          "justifyContent": "center",
                          "margin": 5,
                          "marginLeft": 10,
                          "marginRight": 10,
                          "padding": 10,
                          "width": 153,
                        }
                      }
                      testID="renterCB"
                      uncheckedIcon={
                        <Text
                          style={
                            {
                              "color": "#216dab",
                              "fontFamily": "Kanit-Medium",
                              "fontSize": 20,
                            }
                          }
                        >
                          Renter
                        </Text>
                      }
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                          }
                        }
                      >
                        <Text
                          style={
                            [
                              {
                                "backgroundColor": "transparent",
                                "color": "#20303C",
                                "writingDirection": "ltr",
                              },
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                              {
                                "color": "#216dab",
                                "fontFamily": "Kanit-Medium",
                                "fontSize": 20,
                              },
                            ]
                          }
                        >
                          Renter
                        </Text>
                      </View>
                    </View>
                    <View
                      accessibilityRole="checkbox"
                      accessibilityState={
                        {
                          "busy": undefined,
                          "checked": false,
                          "disabled": false,
                          "expanded": undefined,
                          "selected": undefined,
                        }
                      }
                      accessibilityValue={
                        {
                          "max": undefined,
                          "min": undefined,
                          "now": undefined,
                          "text": undefined,
                        }
                      }
                      accessible={true}
                      checkedIcon={
                        <Text
                          style={
                            {
                              "color": "#f0f6fb",
                              "fontFamily": "Kanit-Medium",
                              "fontSize": 20,
                            }
                          }
                        >
                          Ship Owner
                        </Text>
                      }
                      collapsable={false}
                      focusable={true}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        {
                          "alignContent": "flex-start",
                          "backgroundColor": "#d7edff",
                          "borderColor": "#216dab",
                          "borderRadius": 10,
                          "borderWidth": 2,
                          "flexDirection": "row",
                          "height": 76,
                          "justifyContent": "center",
                          "margin": 5,
                          "marginLeft": 10,
                          "marginRight": 10,
                          "padding": 10,
                          "width": 153,
                        }
                      }
                      testID="shipOwnerCB"
                      uncheckedIcon={
                        <Text
                          style={
                            {
                              "color": "#216dab",
                              "fontFamily": "Kanit-Medium",
                              "fontSize": 20,
                            }
                          }
                        >
                          Ship Owner
                        </Text>
                      }
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                          }
                        }
                      >
                        <Text
                          style={
                            [
                              {
                                "backgroundColor": "transparent",
                                "color": "#20303C",
                                "writingDirection": "ltr",
                              },
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                              {
                                "color": "#216dab",
                                "fontFamily": "Kanit-Medium",
                                "fontSize": 20,
                              },
                            ]
                          }
                        >
                          Ship Owner
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    [
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      {
                        "width": 625,
                      },
                    ]
                  }
                >
                  <View
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#216dab",
                        "borderRadius": 6,
                        "elevation": 2,
                        "flexDirection": "row",
                        "gap": 0,
                        "justifyContent": "center",
                        "paddingHorizontal": 10,
                        "paddingVertical": 6,
                      }
                    }
                  >
                    <Text
                      numberOfLines={0}
                      style={
                        {
                          "borderBottomWidth": 0,
                          "borderColor": undefined,
                          "color": "#f0f6fb",
                          "fontFamily": "Kanit-Medium",
                          "fontSize": 18,
                          "lineHeight": undefined,
                          "textAlign": undefined,
                        }
                      }
                    >
                      Confirm
                    </Text>
                    <View
                      style={
                        [
                          undefined,
                          undefined,
                          undefined,
                          undefined,
                          undefined,
                          undefined,
                          undefined,
                          {
                            "position": "absolute",
                            "right": 20,
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
            </RCTScrollView>
          </View>
        </View>
      </View>
      <RNSScreenStackHeaderConfig
        backButtonInCustomView={false}
        backTitleVisible={true}
        backgroundColor="rgb(255, 255, 255)"
        color="rgb(0, 122, 255)"
        direction="ltr"
        disableBackButtonMenu={false}
        hidden={false}
        hideBackButton={false}
        largeTitleHideShadow={false}
        title="RoleSelect"
        titleColor="rgb(28, 28, 30)"
        topInsetEnabled={false}
        translucent={false}
      />
    </RNSScreen>
  </RNSScreenStack>
</RNCSafeAreaProvider>
`;
